--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -79,8 +79,8 @@
                         <ToggleButton x:Name="toggleButton_UseAbsoluteTime" Content="ABSOLUTE TIME" VerticalAlignment="Top" Height="28" IsChecked="{Binding PreviewUseAbsoluteTime}" IsEnabled="{Binding PreviewNavigationEnabled}" Checked="toggleButton_UseAbsoluteTime_Checked" Unchecked="toggleButton_UseAbsoluteTime_Unchecked" Grid.Column="2" Margin="5.333,0,0,0"/>
                     </Grid>
                     <oxy:PlotView x:Name="PlotView_signalPlot" Margin="265,90,341,10" Model="{Binding PreviewSignalPlot}" IsEnabled="{Binding PreviewNavigationEnabled}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True"/>
-                    <mtr:ProgressRing Name="ProgressRing_PreviewTab" IsActive="{Binding PreviewProgressRingEnabled}"> </mtr:ProgressRing>
-                    
+                    <mtr:ProgressRing Name="ProgressRing_PreviewTab" IsActive="{Binding PreviewProgressRingEnabled}"></mtr:ProgressRing>
+
                     <!-- EDF Header -->
                     <Label Content="EDF Header" FontSize="18" Margin="0,10,178.333,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" HorizontalAlignment="Right" Width="114"/>
                     <Grid HorizontalAlignment="Right" Width="292" Margin="0,35,0.333,26.667" IsEnabled="{Binding IsEDFLoaded}">
@@ -122,6 +122,59 @@
 
             <mtr:MetroTabItem Header="Analysis">
                 <mtr:MetroAnimatedSingleRowTabControl  Margin="10,10,10,10">
+                    <mtr:MetroTabItem Header="Coherence" Height="40">
+                        <Grid>
+                            <Grid Height="40" VerticalAlignment="Top" Margin="0,50,10,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="225"/>
+                                    <ColumnDefinition MaxWidth="250" Width="250*"/>
+                                    <ColumnDefinition MaxWidth="250" Width="250*"/>
+                                    <ColumnDefinition MaxWidth="200" Width="200*"/>
+                                    <ColumnDefinition MaxWidth="200" Width="200*"/>
+                                    <ColumnDefinition Width="149*"/>
+                                </Grid.ColumnDefinitions>
+                                <Label Content="From Loaded EDF File" FontSize="18" Margin="0,4,20,4"/>
+                                <Label Content="Signal 1" HorizontalAlignment="Left" Margin="10,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="70" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="1"/>
+                                <ComboBox Margin="85,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="1" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal1}"/>
+                                <Label Content="Signal 2" HorizontalAlignment="Left" Margin="6,6,0,6" RenderTransformOrigin="-5.432,0.857" Width="74" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="2"/>
+                                <ComboBox Margin="85,6,10,6" RenderTransformOrigin="1.025,1.5" Grid.Column="2" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}"/>
+                                <Label Content="From" HorizontalAlignment="Left" Margin="10,8,0,4" RenderTransformOrigin="-5.432,0.857" Width="47" HorizontalContentAlignment="Center" FontSize="14" Grid.Column="3"/>
+                                <mtr:NumericUpDown Margin="57,8,10,4" TextAlignment="Center" FontSize="14" Grid.Column="3" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding CoherenceEDFStartRecord}"/>
+                                <Label Content="Length" Margin="10,7,0,5" RenderTransformOrigin="-5.432,0.857" HorizontalContentAlignment="Center" FontSize="14" HorizontalAlignment="Left" Width="62" Grid.Column="4"/>
+                                <mtr:NumericUpDown Margin="72,8,10,4"  TextAlignment="Center" FontSize="14" Grid.Column="4" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding CoherenceEDFDuration}"/>
+                                <Button x:Name="button_PerformCoherenceAnalysis" Content="Go" Margin="10,8,0,4" HorizontalAlignment="Left" Width="91" Grid.Column="5" IsEnabled="{Binding IsEDFLoaded}" Click="button_PerformCoherenceAnalysis_Click" />
+                            </Grid>
+                            <Grid Margin="0,90,10,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="165*"/>
+                                    <ColumnDefinition Width="165*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="194*"/>
+                                    <RowDefinition Height="194*"/>
+                                    <RowDefinition Height="194*"/>
+                                </Grid.RowDefinitions>
+                                <Label Content="Signal 1 (Time)" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,10,0,0"/>
+                                <oxy:PlotView Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Model="{Binding CoherenceSignalPlot1}"/>
+                                <Label Content="Signal 2 (Time)" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,10,0,0" Grid.Row="1"/>
+                                <oxy:PlotView Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.Row="1" Model="{Binding CoherenceSignalPlot2}"/>
+                                <Label Content="Coherence" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,10,0,0" Grid.Row="2"/>
+                                <oxy:PlotView Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.Row="2" Model="{Binding CoherencePlot}"/>
+                                <Label Content="Signal 1 (Fourier)" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,10,0,0" Grid.Column="1"/>
+                                <oxy:PlotView Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.Column="1" Model="{Binding CoherenceSignalFreq1}"/>
+                                <Label Content="Signal 2 (Fourier)" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,10,0,0" Grid.Row="1" Grid.Column="1"/>
+                                <oxy:PlotView Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.Column="1" Grid.Row="1" Model="{Binding CoherenceSignalFreq2}"/>
+                            </Grid>
+                            <Grid Height="40" VerticalAlignment="Top" Margin="0,10,10,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="225"/>
+                                    <ColumnDefinition Width="831*"/>
+                                </Grid.ColumnDefinitions>
+                                <Label Content="From Binary File" FontSize="18" Margin="0,4,20,4"/>
+                                <Button Content="Open" Width="122" Margin="10,6,0,6" HorizontalAlignment="Left" Grid.Column="1"/>
+                            </Grid>
+                        </Grid>
+                    </mtr:MetroTabItem>
                     <mtr:MetroTabItem Header="Respiratory" Height="40">
                         <Grid>
                             <Grid Height="40" VerticalAlignment="Top" Margin="0,10,10,0">
